--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="template1">
 <head>
 <meta charset="UTF-8">
@@ -33,7 +34,7 @@
 						<th>
 						DATE DE NAISSANCE
 						</th>
-						<th>
+						<th sec:authorize="hasRole('ADMIN')">
 						ACTION
 						</th>
 					</tr>
@@ -43,10 +44,10 @@
 					<td th:text="${p.id}"></td>
 					<td th:text="${p.nom}"></td>
 					<td th:text="${p.dateNaissance}"></td>
-					<td><a class="btn btn-danger"
+					<td sec:authorize="hasRole('ADMIN')"><a class="btn btn-danger"
 								th:href="@{supprimer(id=${p.id}, keyword=${keyword}, page=${currentPage})}">Suprimer</a>
 					</td>
-					<td><a class="btn btn-success"
+					<td sec:authorize="hasRole('ADMIN')"><a class="btn btn-success"
 					    th:href="@{modifier(id=${p.id}, keyword=${keyword}, page=${currentPage})}">Modifier</a> </td>
 				</tr>
 			</tbody>
