--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -10,15 +10,16 @@
     <script type="text/javascript" th:href="@{/js/bootstrap.bundle.js}"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <!-- Navbar content -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light rounded" aria-label="Eleventh navbar example">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{patients}">RendezVous</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" th:href="@{patients}">Rendez-Vous</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav nav">
+
+        <div class="collapse navbar-collapse" id="navbarsExample09">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{patients}">PATIENTS</a>
                 </li>
@@ -32,22 +33,59 @@
                     <a class="nav-link " href="#">CONSULTATIONS</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" role="button" >
-                        <span sec:authentication="name"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a class="dropdown-item" th:href="@{/logout}">Logout</a>
-                        </li>
-                    </ul>
+            <ul class="nav navbar-nav navbar-right">
+
+                <li class="nav-item ms-2">
+
+                    <span sec:authentication="name">  <span class="badge badge-primary"></span></span>
+
+                </li>
+                <li class="nav-item ms-4 ">
+                    <a  class="btn btn-danger btn-sm" th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
         </div>
-
     </div>
 </nav>
+
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--    &lt;!&ndash; Navbar content &ndash;&gt;-->
+<!--    <div class="container-fluid">-->
+<!--        <a class="navbar-brand" th:href="@{patients}">RendezVous</a>-->
+<!--        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-icon"></span>-->
+<!--        </button>-->
+<!--        <div class="collapse navbar-collapse" id="navbarNav">-->
+<!--            <ul class="navbar-nav nav">-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link active" aria-current="page" th:href="@{patients}">PATIENTS</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="#">MEDECINS</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="#">RENDEZ-VOUS</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link " href="#">CONSULTATIONS</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--            <ul class="navbar-nav ">-->
+<!--                <li class="nav-item dropdown">-->
+<!--                    <a class="nav-link dropdown-toggle" role="button" >-->
+<!--                        <span sec:authentication="name"></span>-->
+<!--                    </a>-->
+<!--                    <ul class="dropdown-menu">-->
+<!--                        <li>-->
+<!--                            <a class="dropdown-item" th:href="@{/logout}">Logout</a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+
+<!--    </div>-->
+<!--</nav>-->
 
 <section layout:fragment="content1"></section>
 </body>
