--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -13,9 +13,9 @@
  <div class="row">
   	<div class="col-12 align-items-center">
   	    <div class="card">
- 	<div class="card-header" style="text-color: red;">Warning !!!</div>
- 	<div class="card-body align-items-center">
-		<h1 style="text-color: red;">Access Denied !!</h1>
+ 	<div class="card-header" style="color: red;">Warning !!!</div>
+ 	<div class="card-body text-center">
+		<h1 style="color: red;">Access Denied !!</h1>
  	</div>
 </div>
   	</div>
